# cifar_gpus

./: .gitignore  README.md  pyproject.toml  requirements.txt
cifar_gpus/data_parallel/: main.py
cifar_gpus/lightning/: main.py  module.py
cifar_gpus/utils/: arguments.py  datasets.py  model.py  optimizer.py
data_parallel/: main.py  utils.py
lightning/: module.py  train.py
topaze/: Makefile  README.md  ccc_dp.sh  ccc_lightning.sh
